force-app/main/default/objects/PDRI__Audit_Report__c/fields/PDRI__Error__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Error__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>